ui/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: ui
  name: ui
  namespace: <PROJECT>
spec:
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    deploymentconfig: ui
  type: ClusterIP
