ui/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: ui
  name: ui
  namespace: <PROJECT>
spec:
  host: <DOMAIN>
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: ui
    weight: 100
  wildcardPolicy: None
